--- a/SampleMojoProject/Apps/SampleApp/templates/base.html
+++ b/SampleMojoProject/Apps/SampleApp/templates/base.html
@@ -3,11 +3,16 @@
 <html>
 <head>
     <title>DynaMojo Test template</title>
+
 </head>
 <body>
 
 {% block messagearea %}A bolder title{% end %}
 
+
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script type="text/javascript" src="{{ static_url('socket.io.js') }}"></script>
+<script type="text/javascript" src="{{ static_url('custom_socket.js') }}"></script>
 
 </body>
 </html>
